--- a/pages/about_musicians.html
+++ b/pages/about_musicians.html
@@ -19,7 +19,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 
 <head>
-<title>Buffalo Strings | About the Musicians</title>
+<title>Buffalo Strings | About the Musicians | Weddings, Ceremonies, String Music | Buffalo, New York</title>
 <meta name="Description" content="High quality string music performances for weddings, parties, and special events in the Buffalo, NY and Western New York area">
 <meta name="KeyWords" content="string music, buffalo string quartet, wedding music, reception entertainment, violin music, buffalo musicians">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
