--- a/pages/duo_repertoire.html
+++ b/pages/duo_repertoire.html
@@ -9,7 +9,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
-<title>Buffalo Strings | Repertoire</title>
+<title>Buffalo Strings | Repertoire | Weddings, Ceremonies, String Music | Buffalo, New York</title>
 <meta name="Description" content="High quality string music performances for weddings, parties, and special events in the Buffalo, NY and Western New York area">
 <meta name="KeyWords" content="string music, buffalo string quartet, wedding music, reception entertainment, violin music, buffalo musicians">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
