--- a/pages/quartet_repertoire.html
+++ b/pages/quartet_repertoire.html
@@ -8,8 +8,8 @@ Licence URI: https://www.os-templates.com/template-terms
 -->
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
-<head> 
-<title>Buffalo Strings | Repertoire | Weddings, Ceremonies, String Music | Buffalo, New York</title>
+<head>
+<title>Buffalo Strings | Repertoire</title>
 <meta name="Description" content="High quality string music performances for weddings, parties, and special events in the Buffalo, NY and Western New York area">
 <meta name="KeyWords" content="string music, buffalo string quartet, wedding music, reception entertainment, violin music, buffalo musicians">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -42,8 +42,10 @@ Licence URI: https://www.os-templates.com/template-terms
       </div>
       <div id="quickinfo" class="fl_right">
         <ul class="nospace inline">
-          <li><strong>contact:</strong><br>
-            (716) 202-8749</li>
+          <li><strong>primary:</strong><br>
+            (716) 202-8749</li>
+          <li><strong>secondary:</strong><br>
+            (716) 400 6364</li>
         </ul>
       </div>
       <!-- ################################################################################################ -->
@@ -196,7 +198,7 @@ Licence URI: https://www.os-templates.com/template-terms
             <p>
               Air in G (D), from Orchestra Suite N3<br>
               Arioso<br>
-              Jesu, Joy of Man's Desiring<br>
+              Jesu, Joy of Man’s Desiring<br>
               Sheep May Safely Graze<br>
               Wachet auf (Sleepers Awake)<br>
               Ave Maria<br>
@@ -204,11 +206,11 @@ Licence URI: https://www.os-templates.com/template-terms
               One Hand , One Heart<br>
               Notturno from Quartet N 2<br>
               Prelude from "Te Deum"<br>
-              Trumpet Voluntary ("The Prince of Denmark")<br>
+              Trumpet Voluntary (“The Prince of Denmark"<br>
               Clair de Lune<br>
               Flower Duet front he opera Lakme<br>
               Serenade in E Major, Op 22<br>
-              Salute D'Amour<br>
+              Salute D’Amour<br>
               Panis Angelicus<br>
               Pavane<br>
               Berceuse<br>
@@ -234,12 +236,12 @@ Licence URI: https://www.os-templates.com/template-terms
               Rondeau<br>
               Cannon in D<br>
               Trumpet Tune in D Major<br>
-              Nessun Dorma from "Turandot"<br>
+              Nessun Dorma from “Turandot”<br>
               Gymnopedie N 1<br>
               Ave Maria<br>
               Dreaming (Scenes from Childhood album)<br>
               Andante Cantabile<br>
-              Waltz from "Sleeping Beauty"<br>
+              Waltz from “Sleeping Beauty”<br>
               Waltz of the Flowers from the "Nutcracker Suite"<br>
               Rhapsody on a Theme by Paganini<br>
               The four seasons, Largo from the Winter<br>
@@ -315,7 +317,7 @@ Licence URI: https://www.os-templates.com/template-terms
               ELVIS PRESLEY<br>
               ENNIO MARRICONE<br>
               ERIC CLAPTON<br>
-              GUNS N' ROSES<br>
+              GUNS N’ ROSES<br>
               JOHN LEGEND<br>
               JOURNEY<br>
               LEONARD COHEN<br>
@@ -385,9 +387,9 @@ Licence URI: https://www.os-templates.com/template-terms
               The Prayer<br>
               Your song<br>
               Can't stop falling in Love<br>
-              Gabriel's Oboe<br>
+              Gabriel’s Oboe<br>
               Wonderful Tonight<br>
-              Sweet Child O' Mine<br>
+              Sweet Child O’ Mine<br>
               All of Me<br>
               Don't stop Believin<br>
               Hallelujah<br>
@@ -407,7 +409,7 @@ Licence URI: https://www.os-templates.com/template-terms
               How Long Will I love You<br>
               Love me like you do<br>
               This must be the place<br>
-              You're Still the One<br>
+              You’re Still the One<br>
               Wonderwall<br>
               Home<br>
               You are the best Thing<br>
@@ -541,7 +543,7 @@ Licence URI: https://www.os-templates.com/template-terms
           </div>
         </div>
       </div>
-
+<!--
        <div id="section5">
         <h4>Traditional/Religious</h4>
         <div class="group btmspace-50 demo repertoire-list">
@@ -600,6 +602,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <div class="clear"></div>
   </main>
 </div>
+-->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
@@ -611,12 +614,12 @@ Licence URI: https://www.os-templates.com/template-terms
     </div>
     <div class="one_third">
       <ul class="nospace btmspace-30 linklist contact">
-        <li><i class="fa fa-phone"></i> +1 (716) 202 8749</li>
+        <li><i class="fa fa-phone"></i> +1 (716) 202 8749</li>
       </ul>
     </div>
     <div class="one_third">
       <ul class="nospace btmspace-30 linklist contact">
-        <li><i class="fa fa-envelope-o"></i> <a href="https://buffalostrings.com/pages/contact.html"> CONTACT US </a>  </li>
+        <li><i class="fa fa-envelope-o"></i> <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%69%6E%71%75%69%72%79%40%62%75%66%66%61%6C%6F%73%74%72%69%6E%67%73%2E%63%6F%6D?subject=Buffalo Strings Web Inquiry&body=Dear Buffalo Strings,%0D%0A%0D%0AI'm interested in your services for my event. Please forwards more information with regards to the details below.%0D%0A%0D%0ASincerely,%0D%0A[FULL NAME]%0D%0A[EVENT DATE]%0D%0A[EVENT DURATION]%0D%0A[EVENT LOCATION]"> &#105;&#110;&#113;&#117;&#105;&#114;&#121;&#64;&#98;&#117;&#102;&#102;&#97;&#108;&#111;&#115;&#116;&#114;&#105;&#110;&#103;&#115;&#46;&#99;&#111;&#109; </a>  </li>
       </ul>
     </div>
     <!-- ################################################################################################ -->
